# cppmath

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
src/: bouncing.cpp  bouncing_ball.cpp  seive_prime.cpp
